Set add-opens when running tests on Java 16