@@ -81,6 +81,7 @@ compileJava.options.bootstrapClasspath = files("${jdk8}/jre/lib/rt.jar", "${jdk8
 test {
     if (project.hasProperty("test16")) {
         executable = jdk16 + '/bin/java'
+        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
         useJUnit {
             excludeCategories 'com.newrelic.test.marker.Java16IncompatibleTest'
         }
